fixed badge alignment in Subjets and Classes

--- a/src/app/features/subjects/containers/assign-subjects-question/assign-subjects-question.component.scss
+++ b/src/app/features/subjects/containers/assign-subjects-question/assign-subjects-question.component.scss
@@ -158,7 +158,7 @@ aside {
 .search__wrapper {
   position: relative;
   width: 100%;
-  padding: 4px 15px;
+  padding: 4px 5px;
   justify-content: center;
   align-items: flex-end;
   flex-direction: row;
