--- a/src/app/shared/components/phone-icon-field/phone-icon-field.component.scss
+++ b/src/app/shared/components/phone-icon-field/phone-icon-field.component.scss
@@ -73,10 +73,10 @@ aside {
 
 // TODO: Refactor to own file
 .form__input-wrapper--main .form__icon-select-wrapper {
-  z-index: 1;
-  position: absolute;
-  left: 0;
-  transform: translateX(-150%);
+  // z-index: 1;
+  // position: absolute;
+  // left: 0;
+  // transform: translateX(-150%);
   display: flex;
 }
 
